--- a/css/workstyles.css
+++ b/css/workstyles.css
@@ -1,6 +1,6 @@
 /* WORK NEW PAGE */
 #work-new{
-  height: 50vh;
+  height: 45vh;
   padding: 10% inherit;
   text-align: center;
   background-color: #f0f4fb;
@@ -10,14 +10,15 @@
 
 }
 
+h5{
+  font-weight: bold;
+}
 
 /* TITLE */
 .title-pad{
   padding-right: 0;
   margin-right: 0;
 }
-
-
 
 .title-div-2021{
   padding-top: 40px;
@@ -41,9 +42,16 @@
 /* MONTH SECTION */
 
 
-
-
-
+/* CAROUSEL */
+.overlay-image-new{
+  position: absolute;
+  height: auto;
+  width: auto;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
 
 @media only screen and (max-width: 768px){
   .work-info{
